# poethepoet-tasks

./: README.md  pyproject.toml
.github/workflows/: cicd.yml
src/poethepoet_tasks/: __init__.py  task_collection.py  tasks.py
src/poethepoet_tasks/helpers/: inspection.py
tests/: test_script_decorator.py  test_tags.py
