[project]
name = "poethepoet-tasks"
version = "0.1.0"
description = "A tasks package with common project tasks for Poe the Poet."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "mypy>=1.15.0",
  "poethepoet>=0.33.1",
  "pytest>=8.3.5",
  "ruff>=0.11.2",
]

[tool.poe]
executor.type = "uv"
task_packages = "poethepoet_tasks:tasks"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
